PCHR-1305: PR Review updates

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -218,8 +218,14 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                                   <li ng-repeat="action in report.actionsFor(request)">
-                                    <a ng-if="action == 'cancel'" href ng-click="report.action(request, action)">{{action}}</a>
-                                    <a ng-if="action != 'cancel'" href leave-request-popup leave-request="request" contact-id="report.contactId">{{action}}</a>
+                                    <a ng-if="action === 'cancel'" href
+                                      ng-click="report.action(request, action)">
+                                      {{action}}
+                                    </a>
+                                    <a ng-if="action !== 'cancel'" href
+                                      leave-request-popup leave-request="request" contact-id="report.contactId">
+                                      {{action}}
+                                    </a>
                                   </li>
                                 </ul>
                               </div>
@@ -381,8 +387,14 @@
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                                 <li ng-repeat="action in report.actionsFor(request)">
-                                  <a ng-if="action == 'cancel'" href ng-click="report.action(request, action)">{{action}}</a>
-                                  <a ng-if="action != 'cancel'" href leave-request-popup leave-request="request" contact-id="report.contactId">{{action}}</a>
+                                  <a ng-if="action === 'cancel'" href
+                                    ng-click="report.action(request, action)">
+                                    {{action}}
+                                    </a>
+                                  <a ng-if="action !== 'cancel'" href
+                                    leave-request-popup leave-request="request" contact-id="report.contactId">
+                                    {{action}}
+                                  </a>
                                 </li>
                               </ul>
                             </div>
@@ -464,13 +476,17 @@
                             {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                           </td>
                           <td>
-                            <div uib-dropdown dropdown-append-to-body ng-if="report.actionsFor(request).length">
+                            <div uib-dropdown dropdown-append-to-body
+                              ng-if="report.actionsFor(request).length">
                               <a href class="btn btn-default btn-inline" uib-dropdown-toggle>
                                 <i class="fa fa-ellipsis-v"></i>
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                                 <li ng-repeat="action in report.actionsFor(request)">
-                                  <a href leave-request-popup leave-request="request" contact-id="report.contactId">{{action}}</a>
+                                  <a href
+                                    leave-request-popup leave-request="request" contact-id="report.contactId">
+                                    {{action}}
+                                  </a>
                                 </li>
                               </ul>
                             </div>
