AI-12: Add width limit to contact type widget

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-individual.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-individual.scss
@@ -106,6 +106,8 @@
       }
 
       #s2id_contact_sub_type {
+        max-width: 165px;
+        
         .select2-search-field {
           width: 20%;
         }
