--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-individual.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-individual.scss
@@ -106,10 +106,14 @@
       }
 
       #s2id_contact_sub_type {
-        max-width: 165px;
-        
+        max-width: 180px;
+
         .select2-search-field {
           width: 20%;
+        }
+
+        .select2-choices {
+          padding-right: 20px;
         }
       }
 
@@ -119,7 +123,8 @@
     }
   }
   .contact_information-section {
-    width: 100% !important;
+    table-layout: fixed;
+
     tr {
       &:first-child {
         td {
