--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -165,6 +165,37 @@
                 </div>
               </div>
             </crm-loading>
+            <div class="row" ng-show="$ctrl.sickness == true">
+              <div class="col-xs-12 form-horizontal">
+              <hr>
+                <div class="form-group">
+                  <label class="col-xs-4 control-label">Reason<i class="fa fa-asterisk"></i></label>
+                  <div class="col-xs-8">
+                    <div class="chr_custom-select chr_custom-select--full">
+                      <select name="reason" class="ng-pristine ng-valid ng-not-empty ng-touched" id="">
+                        <option value="- select -">- select -</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-xs-12">
+                    <label class="chr_custom-checkbox squared">
+                      <input required type="checkbox" value="certification">
+                      <span>Self certification form required</span>
+                    </label>
+                    <label class="chr_custom-checkbox squared">
+                      <input required type="checkbox" value="interview">
+                      <span>Back to work interview required</span>
+                    </label>
+                    <label class="chr_custom-checkbox squared">
+                      <input required type="checkbox" value="work">
+                      <span>Return to work required</span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </div>
           </uib-tab>
           <uib-tab heading="Comments"></uib-tab>
           <uib-tab heading="Files"></uib-tab>
