--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -1,7 +1,7 @@
 <div class="my-leave-page">
   <div class="button-container">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary" leave-request-popup sickness="false" contact-id="myleave.contactId">Record New Absence</button>
+      <button type="button" class="btn btn-primary" leave-request-popup contact-id="myleave.contactId">Record New Absence</button>
       <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
               data-toggle="dropdown">
         <span class="caret"></span>
