--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -203,14 +203,14 @@
                 </div>
               </div>
             </crm-loading>
-            <div class="row" ng-show="$ctrl.sickness == true">
+            <div class="row" ng-show="$ctrl.sickness">
               <div class="col-xs-12 form-horizontal">
               <hr>
                 <div class="form-group">
                   <label class="col-xs-4 control-label">Reason<i class="fa fa-asterisk"></i></label>
                   <div class="col-xs-8">
                     <div class="chr_custom-select chr_custom-select--full">
-                      <select name="reason" class="ng-pristine ng-valid ng-not-empty ng-touched" id="">
+                      <select name="reason">
                         <option value="- select -">- select -</option>
                       </select>
                     </div>
@@ -218,15 +218,15 @@
                 </div>
                 <div class="form-group">
                   <div class="col-xs-12">
-                    <label class="chr_custom-checkbox squared">
+                    <label class="chr_custom-checkbox">
                       <input required type="checkbox" value="certification">
                       <span>Self certification form required</span>
                     </label>
-                    <label class="chr_custom-checkbox squared">
+                    <label class="chr_custom-checkbox">
                       <input required type="checkbox" value="interview">
                       <span>Back to work interview required</span>
                     </label>
-                    <label class="chr_custom-checkbox squared">
+                    <label class="chr_custom-checkbox">
                       <input required type="checkbox" value="work">
                       <span>Return to work required</span>
                     </label>
