PCHR-1380: Few more updates after review

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -218,18 +218,18 @@
                 </div>
                 <div class="form-group">
                   <div class="col-xs-12">
-                    <label class="chr_custom-checkbox">
+                    <div>
                       <input required type="checkbox" value="certification">
                       <span>Self certification form required</span>
-                    </label>
-                    <label class="chr_custom-checkbox">
+                    </div>
+                    <div>
                       <input required type="checkbox" value="interview">
                       <span>Back to work interview required</span>
-                    </label>
-                    <label class="chr_custom-checkbox">
+                    </div>
+                    <div>
                       <input required type="checkbox" value="work">
                       <span>Return to work required</span>
-                    </label>
+                    </div>
                   </div>
                 </div>
               </div>
