AI-16: Fix PR review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -56,7 +56,7 @@
     }
 
     #activity_date_time_time {
-      margin-top: 0px !important;
+      margin-top: 0 !important;
     }
 
     .addon.fa-calendar {
