PCHR-1384: Record Overtime form created. Details section organized into separate templates.

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -8,7 +8,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a leave-request-popup contact-id="myleave.contactId" sickness="true" href="#">Record Sickness</a></li>
-        <li><a href="#">Record Overtime</a></li>
+        <li><a leave-request-popup contact-id="myleave.contactId" overtime="true" href="#">Record Overtime</a></li>
       </ul>
     </div>
   </div>
