--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -12,18 +12,18 @@
   </div>
   <div class="form-group">
     <div class="col-xs-12">
-      <div>
+      <label class="chr_custom-checkbox squared">
         <input required type="checkbox" value="certification">
         <span>Self certification form required</span>
-      </div>
-      <div>
+      </label>
+      <label class="chr_custom-checkbox squared">
         <input required type="checkbox" value="interview">
         <span>Back to work interview required</span>
-      </div>
-      <div>
+      </label>
+      <label class="chr_custom-checkbox squared">
         <input required type="checkbox" value="work">
         <span>Return to work required</span>
-      </div>
+      </label>
     </div>
   </div>
 </div>
