--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -7,8 +7,8 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a leave-request-popup contact-id="myleave.contactId" sickness="true" href="#">Record Sickness</a></li>
-        <li><a leave-request-popup contact-id="myleave.contactId" toil="true"  href="#">Record Overtime</a></li>
+        <li><a leave-request-popup contact-id="myleave.contactId" leave-type="sick" href="#">Record Sickness</a></li>
+        <li><a leave-request-popup contact-id="myleave.contactId" leave-type="toil" href="#">Record Overtime</a></li>
       </ul>
     </div>
   </div>
