--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -12,15 +12,15 @@
   </div>
   <div class="form-group">
     <div class="col-xs-12">
-      <label class="chr_custom-checkbox squared">
+      <label class="chr_custom-checkbox">
         <input required type="checkbox" value="certification">
         <span>Self certification form required</span>
       </label>
-      <label class="chr_custom-checkbox squared">
+      <label class="chr_custom-checkbox">
         <input required type="checkbox" value="interview">
         <span>Back to work interview required</span>
       </label>
-      <label class="chr_custom-checkbox squared">
+      <label class="chr_custom-checkbox">
         <input required type="checkbox" value="work">
         <span>Return to work required</span>
       </label>
