AI-24: Fix review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -89,5 +89,19 @@
         padding-left: 0;
       }
     }
+
+    #recordContribution {
+      tr {
+        td {
+          &:nth-child(2) {
+            padding-left: 0;
+          }
+
+          &.label {
+            padding-right: 20px; 
+          }
+        }
+      }
+    }
   }
 }
