PCHR-1384: Expiry date changes. Removed from/to date selects for TOIL. Checkbox styles changed.

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -99,7 +99,7 @@
             <div class="row" ng-show="$ctrl.overtime">
               <div class="col-xs-12 form-horizontal">
                 <hr>
-                <div class="expire-date">Expiry Date: <span>{{$ctrl.uiOptions.expiredDate}}</div>
+                <div class="expire-date">Expiry Date: <span>{{$ctrl.currentDate()}}</div>
               </div>
             </div>
             <div class="row" src="{{pathTpl + 'directives/sickness.html'}}" ng-show="$ctrl.sickness">
