--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
@@ -27,7 +27,7 @@
       <label class="col-xs-4 control-label">From Date<i class="fa fa-asterisk"></i>
       </label>
       <div class="col-xs-4">
-        <div class="input-group">
+        <div ng-hide="$ctrl.overtime" class="input-group">
           <input
             type="text"
             class="form-control"
@@ -46,8 +46,24 @@
               ng-click="$ctrl.uiOptions.date.from.show = true"></button>
           </span>
         </div>
+        <div ng-show="$ctrl.overtime" class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            uib-datepicker-popup
+            show-button-bar="false"
+            datepicker-options="$ctrl.uiOptions.date.from.options"
+            ng-model="$ctrl.uiOptions.fromDate"
+            is-open="$ctrl.uiOptions.date.from.show"/>
+          <span class="input-group-btn">
+            <button
+              type="button"
+              class="btn btn-default fa fa-calendar"
+              ng-click="$ctrl.uiOptions.date.from.show = true"></button>
+          </span>
+        </div>
       </div>
-      <div class="col-xs-4">
+      <div class="col-xs-4" ng-hide="$ctrl.overtime">
         <crm-loading
           show="!$ctrl.loading.fromDayTypes"
           class="chr_leave-request-modal__small_spinner">
@@ -73,7 +89,7 @@
       <label class="col-xs-4 control-label">To Date<i class="fa fa-asterisk"></i>
       </label>
       <div class="col-xs-4">
-        <div class="input-group">
+        <div ng-hide="$ctrl.overtime" class="input-group">
           <input
             type="text"
             class="form-control"
@@ -92,8 +108,24 @@
               ng-click="$ctrl.uiOptions.date.to.show = $ctrl.leaveRequest.from_date ? true : false"></button>
           </span>
         </div>
+        <div ng-show="$ctrl.overtime" class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            uib-datepicker-popup
+            show-button-bar="false"
+            datepicker-options="$ctrl.uiOptions.date.to.options"
+            ng-model="$ctrl.uiOptions.toDate"
+            is-open="$ctrl.uiOptions.date.to.show"/>
+          <span class="input-group-btn">
+            <button
+              type="button"
+              class="btn btn-default fa fa-calendar"
+              ng-click="$ctrl.uiOptions.date.to.show = true"></button>
+          </span>
+        </div>
       </div>
-      <div class="col-xs-4">
+      <div class="col-xs-4" ng-hide="$ctrl.overtime">
         <crm-loading
           show="!$ctrl.loading.toDayTypes"
           class="chr_leave-request-modal__small_spinner">
