--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -12,18 +12,21 @@
   </div>
   <div class="form-group">
     <div class="col-xs-12">
-      <label class="chr_custom-checkbox">
-        <input required type="checkbox" value="certification">
-        <span>Self certification form required</span>
-      </label>
-      <label class="chr_custom-checkbox">
-        <input required type="checkbox" value="interview">
-        <span>Back to work interview required</span>
-      </label>
-      <label class="chr_custom-checkbox">
-        <input required type="checkbox" value="work">
-        <span>Return to work required</span>
-      </label>
+      <div class="checkbox">
+        <label>
+          <input required type="checkbox" value="certification">Self certification form required
+        </label>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input required type="checkbox" value="interview">Back to work interview required
+        </label>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input required type="checkbox" value="work">Return to work required
+        </label>
+      </div>
     </div>
   </div>
 </div>
