--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -195,6 +195,7 @@ $control-height: 30px;
           box-sizing: border-box;
           font-family: inherit;
           line-height: inherit;
+          padding-right: 20px;
 
           &::before {
             line-height: 22px;
