--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -4,9 +4,9 @@
     <span class="sr-only">Close</span>
   </button>
   <h4 class="modal-title">
-    <span ng-show="!$ctrl.sickness && !$ctrl.overtime">Leave Request</span>
+    <span ng-show="!$ctrl.sickness && !$ctrl.toil">Leave Request</span>
     <span ng-show="$ctrl.sickness">Sick Absence</span>
-    <span ng-show="$ctrl.overtime">Accure TOIL for additional work</span>
+    <span ng-show="$ctrl.toil">Accure TOIL for additional work</span>
   </h4>
 </div>
 <crm-loading show="!$ctrl.loading.absenceTypes">
@@ -34,7 +34,7 @@
         <uib-tabset class="chr_leave-request-modal__tab">
           <uib-tab heading="Details">
             <ng-include src="pathTpl + 'request-modal/details/leave.html'"></ng-include>
-            <ng-include ng-show="$ctrl.overtime" src="pathTpl + 'request-modal/details/toil.html'"></ng-include>
+            <ng-include ng-show="$ctrl.toil" src="pathTpl + 'request-modal/details/toil.html'"></ng-include>
             <crm-loading show="!$ctrl.loading.calculateBalanceChange">
               <div ng-show="$ctrl.uiOptions.showBalance">
                 <hr/>
@@ -94,10 +94,10 @@
                 </div>
               </div>
             </crm-loading>
-            <div class="row" ng-show="$ctrl.overtime">
+            <div class="row" ng-show="$ctrl.toil">
               <div class="col-xs-12 form-horizontal">
                 <hr>
-                <div class="expire-date">Expiry Date: <span>{{$ctrl.currentDate()}}</div>
+                <div class="expire-date">Expiry Date: <span>{{$ctrl.currentDate}}</div>
               </div>
             </div>
             <ng-include ng-show="$ctrl.sickness" src="pathTpl + 'request-modal/details/sickness.html'"></ng-include>
