--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
@@ -22,12 +22,12 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12 form-horizontal" ng-hide="!$ctrl.uiOptions.multipleDays && $ctrl.overtime">
+  <div class="col-xs-12 form-horizontal" ng-hide="!$ctrl.uiOptions.multipleDays && $ctrl.toil">
     <div class="form-group">
       <label class="col-xs-4 control-label">From Date<i class="fa fa-asterisk"></i>
       </label>
       <div class="col-xs-4">
-        <div ng-hide="$ctrl.overtime" class="input-group">
+        <div ng-hide="$ctrl.toil" class="input-group">
           <input
             type="text"
             class="form-control"
@@ -46,7 +46,7 @@
               ng-click="$ctrl.uiOptions.date.from.show = true"></button>
           </span>
         </div>
-        <div ng-show="$ctrl.overtime" class="input-group">
+        <div ng-show="$ctrl.toil" class="input-group">
           <input
             type="text"
             class="form-control"
@@ -63,7 +63,7 @@
           </span>
         </div>
       </div>
-      <div class="col-xs-4" ng-hide="$ctrl.overtime">
+      <div class="col-xs-4" ng-hide="$ctrl.toil">
         <crm-loading
           show="!$ctrl.loading.fromDayTypes"
           class="chr_leave-request-modal__small_spinner">
@@ -89,7 +89,7 @@
       <label class="col-xs-4 control-label">To Date<i class="fa fa-asterisk"></i>
       </label>
       <div class="col-xs-4">
-        <div ng-hide="$ctrl.overtime" class="input-group">
+        <div ng-hide="$ctrl.toil" class="input-group">
           <input
             type="text"
             class="form-control"
@@ -108,7 +108,7 @@
               ng-click="$ctrl.uiOptions.date.to.show = $ctrl.leaveRequest.from_date ? true : false"></button>
           </span>
         </div>
-        <div ng-show="$ctrl.overtime" class="input-group">
+        <div ng-show="$ctrl.toil" class="input-group">
           <input
             type="text"
             class="form-control"
@@ -125,7 +125,7 @@
           </span>
         </div>
       </div>
-      <div class="col-xs-4" ng-hide="$ctrl.overtime">
+      <div class="col-xs-4" ng-hide="$ctrl.toil">
         <crm-loading
           show="!$ctrl.loading.toDayTypes"
           class="chr_leave-request-modal__small_spinner">
