AI-26: Changes in events and contributions pages

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_contact.scss
@@ -23,3 +23,5 @@
 @import 'pages/add-to-smart-group';
 @import 'pages/remove-group';
 @import 'pages/memberships';
+@import 'pages/events';
+@import 'pages/contributions';
