--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -4,4 +4,6 @@ $datepicker-border-color: rgba(0, 0, 0, 0.15);
 $datepicker-gray-dark: #535a67;
 $datepicker-gray-darker: #525966;
 
+$select2-inner-background: #f1f5f6;
+
 $contact-avatar: 90px;
